<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".features.scheduleadd.ScheduleAddFragment">


    <TextView
        android:id="@+id/lecturerID"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:text="@string/lecturer_label"
        tools:text="aaaaaaaaaaaaa" />

    <TextView
        android:id="@+id/start_date"
        android:text="@string/start_date"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        tools:text="aaaaaaaaaaaaa" />

    <TextView
        android:id="@+id/end_date"
        android:text="@string/end_date"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        tools:text="aaaaaaaaaaaaa" />

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/delete"
            android:layout_gravity="right"
            android:text="@string/delete"
            android:layout_marginTop="8dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/update"
            android:layout_gravity="right"
            android:text="@string/update"
            android:layout_marginTop="8dp"
            android:layout_margin="10dp"/>
    </LinearLayout>
</LinearLayout>