<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".features.lecturerdetail.LecturerDetailFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:id="@+id/firstName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="dakusuno" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastName"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/last_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="jalan bagus sekali" />
    </com.google.android.material.textfield.TextInputLayout>
    <Spinner
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="14dp"
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
   <LinearLayout
       android:layout_marginTop="16dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <View
           android:layout_width="0dp"
           android:layout_height="0dp"
           android:layout_weight="1" />
       <com.google.android.material.button.MaterialButton
           android:layout_width="wrap_content"
           android:layout_height="40dp"
           android:id="@+id/delete"
           android:layout_gravity="right"
           android:text="@string/delete"
           android:layout_marginTop="8dp"/>
       <com.google.android.material.button.MaterialButton
           android:layout_width="wrap_content"
           android:layout_height="40dp"
           android:id="@+id/update"
           android:layout_gravity="right"
           android:text="@string/update"
           android:layout_marginTop="8dp"
           android:layout_margin="10dp"/>
   </LinearLayout>
</LinearLayout>